2011-09-23    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/data_samples.py (SNPMarkersSet): Added
	support to bring markers set markers in memory.

	* bl/vl/kb/drivers/omero/proxy.py
	(Proxy.add_snp_marker_definitions): Changed the op_vid parameter
	to be either an Action or a string. Added some sort of documentation.
	(Proxy.create_snp_markers_set): Added new syntactic sugar.
	(Proxy.create_markers): Added new syntactic sugar

2011-09-20    <zag@manzanillo>

	* bl/vl/app/importer/data_sample.py (make_parser_data_sample):
	Added support to be able to directly import DataSample that
	directly link to individuals.

2011-09-18    <zag@manzanillo>

	* .ropeproject/config.py: Added ropemacs support.

2011-09-21    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/convert_sam.py
	(SnpHitProcessor.process): fixed starting position for segment
	extractor output.

2011-09-20    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/convert_sam.py: added an output format
	for Galaxy's genome segment extractor.

2011-09-19    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/convert_sam.py (SnpHitProcessor):
	changed to use numeric values for chromosomes and 'None' instead
	of '*' for a null value.

2011-09-14    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/markers_to_fastq.py: renamed from
	masks_to_fastq.py; quality string char set to '~', the maximum for
	all fastq subformats.

2011-09-12    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/convert_dbsnp.py: changed to output a
	VL marker definition file. Added an option for trimming the mask
	down to a maximum given size.

2011-09-07  Luca Lianas  <luca@tensa-zangetsu>

	* bl/vl/kb/drivers/omero/data_samples.py (DataSample): lastUpdate property removed

	* models/data_sample.ome.xml: lastUpdate property removed

	* models/vessel.ome.xml: lastUpdate property added to Vessel model (and to all children classes by inheritance).
